snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/error-1.11.0-20220426.120746-1.jar.sha1
393eccadfa97eb2c310f9048c2e16bc7a569f4fa